crates/pg_syntax/tests/snapshots/postgres_regress/gist@51.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select count(*) from gist_tbl;
---
SelectStmt@0..30
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Whitespace@20..21 " "
  RangeVar@21..29
    Ident@21..29 "gist_tbl"
  Ascii59@29..30 ";"

