crates/pg_syntax/tests/snapshots/postgres_regress/gist@59.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create index gist_tbl_box_index on gist_tbl using gist (b);
---
IndexStmt@0..59
  Create@0..6 "create"
  Whitespace@6..7 " "
  Index@7..12 "index"
  Whitespace@12..13 " "
  Ident@13..31 "gist_tbl_box_index"
  Whitespace@31..32 " "
  On@32..34 "on"
  Whitespace@34..35 " "
  RangeVar@35..43
    Ident@35..43 "gist_tbl"
  Whitespace@43..44 " "
  Using@44..49 "using"
  Whitespace@49..50 " "
  Ident@50..54 "gist"
  Whitespace@54..55 " "
  Ascii40@55..56 "("
  IndexElem@56..57
    Ident@56..57 "b"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

