crates/pg_syntax/tests/snapshots/postgres_regress/gist@60.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into gist_tbl\n  select box(point(0.05*i, 0.05*i)) from generate_series(0,10) as i;"
---
InsertStmt@0..89
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "gist_tbl"
  Newline@20..21 "\n"
  Whitespace@21..23 "  "
  SelectStmt@23..88
    Select@23..29 "select"
    Whitespace@29..30 " "
    ResTarget@30..54
      FuncCall@30..54
        Ident@30..33 "box"
        Ascii40@33..34 "("
        FuncCall@34..54
          Ident@34..39 "point"
          Ascii40@39..40 "("
          AExpr@40..46
            AConst@40..44
              Fconst@40..44 "0.05"
            Ascii42@44..45 "*"
            ColumnRef@45..46
              Ident@45..46 "i"
          Ascii44@46..47 ","
          Whitespace@47..48 " "
          AExpr@48..54
            AConst@48..52
              Fconst@48..52 "0.05"
            Ascii42@52..53 "*"
            ColumnRef@53..54
              Ident@53..54 "i"
    Ascii41@54..55 ")"
    Ascii41@55..56 ")"
    Whitespace@56..57 " "
    From@57..61 "from"
    Whitespace@61..62 " "
    RangeFunction@62..88
      List@62..82
        FuncCall@62..82
          Ident@62..77 "generate_series"
          Ascii40@77..78 "("
          AConst@78..79
            Iconst@78..79 "0"
          Ascii44@79..80 ","
          AConst@80..82
            Iconst@80..82 "10"
      Ascii41@82..83 ")"
      Whitespace@83..84 " "
      Alias@84..88
        As@84..86 "as"
        Whitespace@86..87 " "
        Ident@87..88 "i"
  Ascii59@88..89 ";"

