crates/pg_syntax/tests/snapshots/postgres_regress/gist@9.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create index gist_pointidx5 on gist_point_tbl using gist(p) with (fillfactor=101);
---
IndexStmt@0..82
  Create@0..6 "create"
  Whitespace@6..7 " "
  Index@7..12 "index"
  Whitespace@12..13 " "
  Ident@13..27 "gist_pointidx5"
  Whitespace@27..28 " "
  On@28..30 "on"
  Whitespace@30..31 " "
  RangeVar@31..45
    Ident@31..45 "gist_point_tbl"
  Whitespace@45..46 " "
  Using@46..51 "using"
  Whitespace@51..52 " "
  Ident@52..56 "gist"
  Ascii40@56..57 "("
  IndexElem@57..58
    Ident@57..58 "p"
  Ascii41@58..59 ")"
  Whitespace@59..60 " "
  With@60..64 "with"
  Whitespace@64..65 " "
  Ascii40@65..66 "("
  DefElem@66..80
    Ident@66..76 "fillfactor"
    Ascii61@76..77 "="
    Iconst@77..80 "101"
  Ascii41@80..81 ")"
  Ascii59@81..82 ";"

