crates/pg_syntax/tests/snapshots/postgres_regress/guc@106.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SET vacuum_cost_delay TO 40;
---
VariableSetStmt@0..28
  Set@0..3 "SET"
  Whitespace@3..4 " "
  Ident@4..21 "vacuum_cost_delay"
  Whitespace@21..22 " "
  To@22..24 "TO"
  Whitespace@24..25 " "
  AConst@25..27
    Iconst@25..27 "40"
  Ascii59@27..28 ";"

