crates/pg_syntax/tests/snapshots/postgres_regress/guc@124.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SET vacuum_cost_delay TO '10s';"
---
VariableSetStmt@0..31
  Set@0..3 "SET"
  Whitespace@3..4 " "
  Ident@4..21 "vacuum_cost_delay"
  Whitespace@21..22 " "
  To@22..24 "TO"
  Whitespace@24..25 " "
  AConst@25..30
    Sconst@25..30 "'10s'"
  Ascii59@30..31 ";"

