crates/pg_syntax/tests/snapshots/postgres_regress/guc@142.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT relname FROM pg_class WHERE relname = 'reset_test';"
---
SelectStmt@0..58
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..14
    ColumnRef@7..14
      Ident@7..14 "relname"
  Whitespace@14..15 " "
  From@15..19 "FROM"
  Whitespace@19..20 " "
  RangeVar@20..28
    Ident@20..28 "pg_class"
  Whitespace@28..29 " "
  Where@29..34 "WHERE"
  Whitespace@34..35 " "
  AExpr@35..57
    ColumnRef@35..42
      Ident@35..42 "relname"
    Whitespace@42..43 " "
    Ascii61@43..44 "="
    Whitespace@44..45 " "
    AConst@45..57
      Sconst@45..57 "'reset_test'"
  Ascii59@57..58 ";"

