crates/pg_syntax/tests/snapshots/postgres_regress/guc@160.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT name FROM pg_prepared_statements;
---
SelectStmt@0..40
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      NameP@7..11 "name"
  Whitespace@11..12 " "
  From@12..16 "FROM"
  Whitespace@16..17 " "
  RangeVar@17..39
    Ident@17..39 "pg_prepared_statements"
  Ascii59@39..40 ";"

